[package]
name = "sagedt"
version = "0.1.0"
edition = "2021"
authors = ["Lurgrid <lurgrid@sagbot.com>"]
repository = "https://github.com/Lurgrid/SAGEDT"
license = "GPL-3.0"

[dependencies]
cfgrammar = "0.13"
chrono = "0.4"
lrlex = "0.13"
lrpar = "0.13"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
actix-web = "4"
reqwest = "0.12"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
